adding bibtex and last changes

--- a/es/Makefile
+++ b/es/Makefile
@@ -12,14 +12,17 @@ pdf: $(PDFFILES)
 
 pdflatex: $(TEXFILES)
 	@pdflatex $(TEXFILES:.tex=)
-	@TEXMFOUTPUT=`pwd` bibtex `pwd`/$(TEXFILES:.tex=)
+	#@TEXMFOUTPUT=`pwd` bibtex `pwd`/$(TEXFILES:.tex=)
+	@TEXMFOUTPUT=`pwd` bibtex `pwd`/publications
+	@TEXMFOUTPUT=`pwd` bibtex `pwd`/theses
+	@TEXMFOUTPUT=`pwd` bibtex `pwd`/reports
 	@pdflatex $(TEXFILES:.tex=)
 	@pdflatex $(TEXFILES:.tex=)
 	@if [ -d publish ];then mv *.pdf publish; else mkdir publish; mv *.pdf publish/;fi
 
 clean:
 	@rubber --clean $(TEXFILES:.tex=)
-	@rm -f *.out *.bbl *.bgl
+	@rm -f *.out *.bbl *.blg *.aux
 
 distclean: clean
 	@rubber --clean --pdf $(TEXFILES:.tex=)
